--- a/src/handsnet_tftrt_yolo /CMakeLists.txt
+++ b/src/handsnet_tftrt_yolo /CMakeLists.txt
@@ -106,7 +106,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES yolov5
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+   CATKIN_DEPENDS message_runtime roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
