--- a/src/handsnet_yolo/CMakeLists.txt
+++ b/src/handsnet_yolo/CMakeLists.txt
@@ -206,7 +206,7 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
-catkin_install_python(PROGRAMS   src/yolov5_classification.py src/tactile_image_publisher.py src/hand_recognition.py 
+catkin_install_python(PROGRAMS   src/yolov5_classification.py src/tactile_image_publisher.py src/hand_recognition.py src/BB_receiver.py
 
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
